@@ -1,3 +1,8 @@
+2007-09-14  Fojtik Jaroslav  <JaFojtik@seznam.cz>
+
+	* coders/mat.c Ability to read multiple images from one MAT file.
+        changed ExtendedSignedIntegralType to magick_off_t that better corresponds to file positioning.
+
 2007-09-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/pdf.c (WritePDFImage): Use ThumbnailImage() to create
